feat: 实现 Markdown 内容渲染
- 添加 commonmark 依赖，用于 Markdown 转 HTML
- 创建 MarkdownUtil 工具类，封装渲染逻辑
- BlogController 在详情页将 content 转为 HTML 传入模板
- detail.html 使用 th:utext 渲染 HTML，不转义标签
- 添加 Markdown 专属 CSS 样式（标题、代码块、引用等）
- 支持 Markdown 常用语法：标题、粗体、列表、代码块、引用"

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,13 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <!-- Markdown 渲染库 (commonmark) -->
+        <dependency>
+            <groupId>org.commonmark</groupId>
+            <artifactId>commonmark</artifactId>
+            <version>0.21.0</version>
+        </dependency>
     </dependencies>
 
     <build>
