--- a/pom.xml
+++ b/pom.xml
@@ -21,22 +21,26 @@
     <properties>
         <java.version>17</java.version>
     </properties>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
-        <!-- 1. Web 核心 -->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
 
-
-
-        <!-- Mybatis 起步依赖 -->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>3.0.3</version>   <!-- 适配 Spring Boot 3.x -->
+            <version>3.0.3</version>
         </dependency>
 
 
@@ -55,26 +59,25 @@
             <optional>true</optional>
         </dependency>
 
-        <!--7. 测试依赖（保留） -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
 
-        <!-- Lombok：简化实体类代码 -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
 
-        <!-- Markdown 渲染库 (commonmark) -->
         <dependency>
             <groupId>org.commonmark</groupId>
             <artifactId>commonmark</artifactId>
             <version>0.21.0</version>
         </dependency>
+
+
     </dependencies>
 
 
