feat: 完成全栈环境适配、Flyway 数据库版本化
-集成 Flyway 迁移框架，实现 Schema 自动化版本管理，确保环境一键初始化;
-移除静态资源路径硬编码，改用 ${user.dir} 动态注入，实现环境无关的部署能力;

--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,14 @@
             <artifactId>commonmark</artifactId>
             <version>0.21.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-mysql</artifactId>
+        </dependency>
 
     </dependencies>
 
