--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
 
 upload.path=${user.dir}/uploads/
+
+app.cors.allowed-origin=http://localhost:5173
+
